--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,8 @@
 *.json linguist-vendored=false
 *.json linguist-generated=false
 *.json linguist-documentation=false
+
+*.svg linguist-detectable=true
+*.svg linguist-vendored=false
+*.svg linguist-generated=false
+*.svg linguist-documentation=false
